--- a/resources/views/components/layouts/main.edge
+++ b/resources/views/components/layouts/main.edge
@@ -10,7 +10,7 @@
 
 </head>
 
-<body class="min-h-screen flex flex-col bg-[#030410]" style="background-image:url('img/background.svg'); background-size: cover; background-repeat: no-repeat; height: 100%;">
+<body class="min-h-screen flex flex-col bg-[#030410]" style="background-image:url('{{ asset('public/img/background.svg') }}'); background-size: cover; background-repeat: no-repeat; height: 100%;">
   @layouts.header()
   @end
   <div class="your-class-name flex-grow flex flex-col">
