feat: Update footer layout and add link to track calories

--- a/resources/views/components/layouts/footer.edge
+++ b/resources/views/components/layouts/footer.edge
@@ -1,4 +1,4 @@
-<footer class="relative inset-x-0 border-t border-[#38B6FF] bottom-0 w-full py-4 bg-opacity-75 backdrop-blur-md bottom-0">
+<footer class="relative inset-x-0 border-t border-[#38B6FF] w-full py-4 bg-opacity-75 backdrop-blur-md bottom-0">
   <div class="container mx-auto mt-5">
     <div class="flex flex-col md:flex-row items-center justify-between">
       <div class="mb-4 flex">
