feat : add Health Calculator

--- a/resources/views/components/layouts/footer.edge
+++ b/resources/views/components/layouts/footer.edge
@@ -3,7 +3,7 @@
     <div class="flex flex-col md:flex-row items-center justify-between">
       <div class="mb-4 flex">
         <img src="{{asset('/public/img/logo.png')}}" alt="Logo" class="h-10 mr-5">
-        <span class="self-center text-2xl font-bold whitespace-nowrap text-[#38B6FF]">LIFESINC</span>
+        <span class="self-center text-2xl font-bold whitespace-nowrap text-[#ffffff]">LIFESINC</span>
       </div>
       <div class="mb-4 md:mb-0">
         <p class="text-sm">Terms and Conditions</p>
