chore: Update CSS styles for tracking chart

--- a/resources/views/components/layouts/main.edge
+++ b/resources/views/components/layouts/main.edge
@@ -7,6 +7,7 @@
   <title> {{{ await $slots.title()}}} </title>
   @vite(['resources/css/app.css', 'resources/js/app.js'])
   <script src="http://sdks.kite.ly/kite-js/v0/latest/kite.min.js"></script>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
 
 </head>
 
